--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -49,6 +49,19 @@
     float: none;
 }
 
-.header .menu-icon {
+.menu-icon {
     margin-right: 10px;
+}
+
+.New-group-bar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #f8f8f8;      /* bootstrappy */
+    border-color: #e7e7e7;
+    padding: 30px 0;
+}
+.Btn-new-group {
+    font-size: 22px;
+    padding: 10px;
 }
