--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -65,3 +65,18 @@
     font-size: 22px;
     padding: 10px;
 }
+
+
+/* Groups page */
+.Group-item {
+
+    background-color: #e7e7e7;
+    border-radius: 4px;
+
+    margin-top: 22px;
+    padding: 15px 24px;
+
+    -webkit-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+    -moz-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+    box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+}
