--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -15,6 +15,10 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6db3f2', endColorstr='#1e69de',GradientType=0 ); /* IE6-9 */
 }
 
+.header img {
+    height: 100%;
+}
+
 
 .Home-logo-container {
 	text-align: center;
