--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -104,3 +104,43 @@
 .Group-item .group-description {
     font-family: 'PT Serif', serif;
 }
+
+.test {
+
+    border: 2px dotted red;
+    border-radius: 4px;
+
+}
+
+/* In groups page */
+
+.Group-presentation {
+    background: white;
+}
+.Group-presentation .picture-container {
+    padding: 32px 15px 20px 15px;
+    text-align: center;
+}
+.Group-presentation .picture-container img {
+    border: 7px solid lightgray;
+    border-radius: 50%;
+    max-width: 200px;
+}
+
+.Group-presentation .text {
+    text-align: center;
+}
+
+.Group-presentation .text .title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+}
+
+img.media-object {
+    height: 75px;
+    border-radius: 50%;
+}
+
+.Group-message {
+    margin-top: 10px;
+}
