--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -6,15 +6,9 @@
 }
 
 .Page-container {
-
 	
 	min-height: 100vh;
 	
-/*		display: flex;
-		flex-direction: row;
-		justify-content: center;*/
-	
-
 	background: #6db3f2; /* Old browsers */
 	background: -moz-linear-gradient(top,  #6db3f2 0%, #54a3ee 50%, #3690f0 51%, #1e69de 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top,  #6db3f2 0%,#54a3ee 50%,#3690f0 51%,#1e69de 100%); /* Chrome10-25,Safari5.1-6 */
@@ -71,8 +65,36 @@
     border-radius: 12px;
 }
 
+/********************************/
+/*    Groups page elements      */
+/********************************/
 
-/* Groups page */
+/* Groups page header */
+.Group-presentation {
+    background: #f8f8f8;
+}
+
+.Group-presentation .picture-container {
+    padding: 32px 15px 20px 15px;
+    text-align: center;
+}
+
+.Group-presentation .picture-container img {
+    border: 7px solid lightgray;
+    border-radius: 50%;
+    max-width: 200px;
+}
+
+.Group-presentation .text {
+    text-align: center;
+}
+
+.Group-presentation .text .title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+}
+
+
 /* Group component */
 .Group-item {
 
@@ -106,103 +128,8 @@
     font-family: 'PT Serif', serif;
 }
 
-.test {
-
-    border: 2px dotted red;
-    border-radius: 4px;
-
-}
-
-/* In groups page */
-
-.Group-presentation {
-    background: #f8f8f8;
-}
-.Group-presentation .picture-container {
-    padding: 32px 15px 20px 15px;
-    text-align: center;
-}
-.Group-presentation .picture-container img {
-    border: 7px solid lightgray;
-    border-radius: 50%;
-    max-width: 200px;
-}
-
-.Group-presentation .text {
-    text-align: center;
-}
-
-.Group-presentation .text .title {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 40px;
-}
 
 img.media-object {
     height: 75px;
     border-radius: 50%;
-}
-
-
-/**
-    Toggler component
-*/
-
-.Toggler {
-    text-decoration: none;
-    color: white;
-    border-radius: 16px;
-}
-
-.Toggler > div {
-    display: inline-block;
-    height: 100%;
-    padding: 24px;
-}
-
-.Toggler a {
-    color: white;
-}
-
-.Toggler .text {
-    border-radius: 16px;
-}
-
-.Toggler .action {
-    float: right;
-}
-
-
-.Toggler.messages {
-    background-color: rgb(1, 91, 125);
-}
-
-.Toggler.messages .text {
-    background-color: rgb(0, 70, 98);
-}
-
-.Toggler.files {
-    background-color: rgb(30, 101, 95);
-}
-
-.Toggler.tasks {
-    background-color: rgb(201, 115, 4);
-}
-
-
-.Group-messages-container {
-    position: relative;
-}
-
-.Group-message {
-
-    /*display: none;*/
-
-    margin-top: 10px;
-    padding: 40px;
-    background: #f8f8f8;
-    border-radius: 4px;
-
-    -webkit-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
-    -moz-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
-    box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
 }
