--- a/Pigeon_website/Resources/css/Group-page.css
+++ b/Pigeon_website/Resources/css/Group-page.css
@@ -2,6 +2,32 @@
 /*       Group page elements      */
 /***********************************/
 
+/* Groups page header */
+.Group-presentation {
+    background: #f8f8f8;
+}
+
+.Group-presentation .picture-container {
+    padding: 32px 15px 20px 15px;
+    text-align: center;
+}
+
+.Group-presentation .picture-container img {
+    border: 7px solid lightgray;
+    border-radius: 50%;
+    max-width: 200px;
+}
+
+.Group-presentation .text {
+    text-align: center;
+}
+
+.Group-presentation .text .title {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+}
+
+
 /* The toggler components toggles messages/tasks/files */
 .Toggler {
     text-decoration: none;
