--- a/Pigeon_website/Resources/css/Group-page.css
+++ b/Pigeon_website/Resources/css/Group-page.css
@@ -33,6 +33,10 @@
     text-decoration: none;
     color: white;
     border-radius: 16px;
+
+    -webkit-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+    -moz-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+    box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
 }
 
 .Toggler > div {
@@ -65,8 +69,16 @@
     background-color: rgb(30, 101, 95);
 }
 
+.Toggler.files .text {
+    background-color: rgb(26, 85, 81);
+}
+
 .Toggler.tasks {
     background-color: rgb(201, 115, 4);
+}
+
+.Toggler.tasks .text {
+    background-color: rgb(151, 88, 9);
 }
 
 /* The group message container component */
