Implemented group remove mechanic

--- a/Pigeon_website/Resources/css/Group-page.css
+++ b/Pigeon_website/Resources/css/Group-page.css
@@ -28,6 +28,14 @@
 }
 
 
+/*
+    Admin buttons
+*/
+.Admin-buttons {
+    margin: 20px 0;
+}
+
+
 .Group-action-btn {
     color: white;
     border-radius: 16px;
