--- a/Pigeon_website/Main.master
+++ b/Pigeon_website/Main.master
@@ -16,6 +16,9 @@
     <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|PT+Serif:400,700italic' rel='stylesheet' type='text/css' />
 
+    <!-- Google MD icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
     <!-- Custom css -->
     <link href="Resources/css/global.css" rel="stylesheet" />
 
