--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -16,6 +16,10 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6db3f2', endColorstr='#1e69de',GradientType=0 ); /* IE6-9 */
 }
 
+.header {
+    font-family: Montserrat, Arial, sans-serif;
+}
+
 .header img {
     height: 100%;
 }
