eventificator jquery tests

--- a/Pigeon_website/Resources/css/Events-Page.css
+++ b/Pigeon_website/Resources/css/Events-Page.css
@@ -1,11 +1,14 @@
 ﻿body {
 }
 
-.myCalendar {  
-    background-color: white;  
-}  
+.myCalendar {
+    background-color: white;
+}
 
-.myCalendar a {  
+.eventCalendar {
+}
+
+.myCalendar a {
     text-decoration: none;
 }
 
@@ -14,27 +17,26 @@
 }
 
 .calendarOtherMonthDay {
-}  
+}
 
 .eventDates {
-    background-color : rgba(211, 93, 14, 0.66);
-    color : white;
-} 
+    background-color: rgba(211, 93, 14, 0.66);
+    color: white;
+}
 
 .lateDate {
-    background-color : red;
-    color : white;
-    text-align : right;
-    vertical-align : top;
-    border-style : outset;
-    border-color : darkgray;
+    background-color: red;
+    color: white;
+    text-align: right;
+    vertical-align: top;
+    border-style: outset;
+    border-color: darkgray;
 }
 
-.Highlight
-{
-    background-color : rgba(22, 71, 94, 0.16);    
+.Highlight {
+    background-color: rgba(22, 71, 94, 0.16);
 }
-.Normal
-{
-    background-color : rgba(255, 255, 255, 0.00);
+
+.Day {
+    background-color: rgba(255, 255, 255, 0.00);
 }
