--- a/Pigeon_website/Resources/css/Group-page.css
+++ b/Pigeon_website/Resources/css/Group-page.css
@@ -117,18 +117,47 @@
 }
 
 /* The group message container component */
-.Group-messages-container {
-    position: relative;
-}
 
 .Group-message {
 
-    margin-top: 10px;
-    padding: 40px;
-    background: #f8f8f8;
-    border-radius: 4px;
+    font-family: Montserrat, Arial, sans-serif;
 
-    -webkit-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
-    -moz-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
-    box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+    margin: 5px 0;
+    padding: 10px 20px;
+    background: #f8f8f8;
+
+    border: 1px solid #eee;
+    border-radius: 12px;
+
+    /*
+        -webkit-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+        -moz-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+        box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
+    */
+
+}
+
+    .Group-message > div {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .Group-message .user-info {
+        text-align: center;
+    }
+    .Group-message .profile-picture-container {
+        padding: 10px;
+    }
+    .Group-message .profile-picture-container img {
+        width: 75px;
+        height: 75px;
+        border-radius: 50%;
+    }
+    .Group-message .post-info {
+        font-weight: bold;
+    }
+
+@media screen and (max-width: 768px) {
+    .Group-message .profile-picture-container {
+        display: none;
+    }
 }
