--- a/Pigeon_website/Resources/css/Tasks.css
+++ b/Pigeon_website/Resources/css/Tasks.css
@@ -9,7 +9,9 @@
 
 .Tasks-app .title {
     font-size: 22px;
-    margin-bottom: 8px;
+    margin: 8px 0;
+    border-bottom: 2px solid #EEE;
+    padding-bottom: 15px;
 }
 
 .Tasks-container,
