--- a/Pigeon_website/Resources/css/Group-page.css
+++ b/Pigeon_website/Resources/css/Group-page.css
@@ -172,12 +172,41 @@
     }
     .Sidebar li {
         list-style-type: none;
-        padding: 16px;
+        margin: 16px 0;
     }
+
     .Sidebar a {
         font-size: 20px;
         color: #fff;
+        padding: 8px;
+        width: 42px;
+        height: 42px;
+        border-radius: 4px;
+        display: block;
+        text-align: center;
+        vertical-align: middle;
     }
+    
+        .Sidebar a:hover, .Sidebar a:focus {
+                color: #337ab7;
+                background: #fff;
+
+
+
+                /* text color transition on hover */
+                -webkit-transition: background-color 400ms ease-in-out;
+                -moz-transition: background-color 400ms ease-in-out;
+                -o-transition: background-color 400ms ease-in-out;
+                -ms-transition: background-color 400ms ease-in-out;
+                transition: background-color 400ms ease-in-out;
+
+                /* background color transition on hover */
+                -webkit-transition: background-color 400ms ease-in-out;
+                -moz-transition: background-color 400ms ease-in-out;
+                -o-transition: background-color 400ms ease-in-out;
+                -ms-transition: background-color 400ms ease-in-out;
+                transition: background-color 400ms ease-in-out;
+            }
 
 @media screen and (max-width: 768px) {
 
