--- a/Pigeon_website/Resources/css/Groups-page.css
+++ b/Pigeon_website/Resources/css/Groups-page.css
@@ -1,5 +1,4 @@
-﻿
-/********************************/
+﻿/********************************/
 /*    Groups page elements      */
 /********************************/
 
@@ -18,33 +17,41 @@
 
     margin-top: 22px;
     padding: 15px 24px;
-
-    -webkit-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
-    -moz-box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
-    box-shadow: 10px 10px 28px -6px rgba(105,85,105,1);
 }
 
-.Group-item .group-title {
+    .Group-item .group-picture-wrapper {
+        padding: 20px;
+    }
 
-    margin-bottom: 12px;
+    .Group-item .group-picture {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        margin: auto;
+        background-size: cover;
+    }
 
-    font-size: 24px;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400; 
-}
+    .Group-item .group-title {
 
-.Group-item .group-since {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-}
+        margin-bottom: 12px;
 
-.Group-item .group-description {
-    font-family: 'PT Serif', serif;
-}
+        font-size: 24px;
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400; 
+    }
+
+    .Group-item .group-since {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
+
+    .Group-item .group-description {
+        font-family: 'PT Serif', serif;
+    }
 
 
-img.media-object {
+/*img.media-object {
     height: 75px;
     border-radius: 50%;
-}
+}*/
