--- a/Pigeon_website/Resources/css/Group-page.css
+++ b/Pigeon_website/Resources/css/Group-page.css
@@ -192,19 +192,13 @@
                 background: #fff;
                 
 
-                /* text color transition on hover */
-                -webkit-transition: background-color 400ms ease-in-out;
-                -moz-transition: background-color 400ms ease-in-out;
-                -o-transition: background-color 400ms ease-in-out;
-                -ms-transition: background-color 400ms ease-in-out;
-                transition: background-color 400ms ease-in-out;
+                /* transition color and background-color on hover */
+                -webkit-transition: all 400ms ease-in-out;
+                -moz-transition: all 400ms ease-in-out;
+                -o-transition: all 400ms ease-in-out;
+                -ms-transition: all 400ms ease-in-out;
+                transition: all 400ms ease-in-out;
 
-                /* background color transition on hover */
-                -webkit-transition: background-color 400ms ease-in-out;
-                -moz-transition: background-color 400ms ease-in-out;
-                -o-transition: background-color 400ms ease-in-out;
-                -ms-transition: background-color 400ms ease-in-out;
-                transition: background-color 400ms ease-in-out;
             }
 
 @media screen and (max-width: 768px) {
