--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -28,6 +28,41 @@
 }
 
 
+/*
+    Home page styling
+*/
+
+.Home-page {
+    font-family: Montserrat;
+}
+    .Home-page .description {
+        background: #E8BA61;
+        border-radius: 8px;
+        border-color: #aaa;
+        padding: 24px;
+    }
+
+    .Home-page .description .inner-wrapper {
+        max-width: 525px;
+        margin: auto;
+    }
+
+    .Home-page .description hr {
+        border-top: 2px solid #ddd;
+    }
+
+    .Home-page .description p {
+        font-size: 18px;
+    }
+
+.Home-page .main-title {
+    font-size: 52px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+}
+
 .Home-logo-container {
 	text-align: center;
 	padding: 50px;
@@ -37,6 +72,9 @@
 	width: 100%;
 	max-width: 400px;
 }
+
+
+
 
 
 .Groups-wrapper {
