--- a/Pigeon_website/Resources/css/Groups-page.css
+++ b/Pigeon_website/Resources/css/Groups-page.css
@@ -18,7 +18,21 @@
     margin-top: 22px;
     padding: 15px 24px;
 
+    transition: background-color .3s ease-in-out;
+    -o-transition: background-color .3s ease-in-out;
+    -moz-transition: background-color .3s ease-in-out;
+    -webkit-transition: background-color .3s ease-in-out;
 }
+
+    .Group-item:hover, .Group-item:focus {
+        background-color: #ccc;
+        cursor: pointer;
+
+        transition: background-color .3s ease-in-out;
+       -o-transition: background-color .3s ease-in-out;
+       -moz-transition: background-color .3s ease-in-out;
+       -webkit-transition: background-color .3s ease-in-out;
+    }
 
     .Group-item .group-picture {
        transition: all .3s linear;
