More features on homepage

--- a/Pigeon_website/Resources/css/Homepage.css
+++ b/Pigeon_website/Resources/css/Homepage.css
@@ -58,4 +58,8 @@
     padding: 42px;
     border-radius: 8px;
     border: 1px solid #bbb;
+    margin-top: 10px;
 }
+    .Home-page .feature .content {
+        padding: 12px;
+    }
