--- a/Pigeon_website/Resources/css/Groups-page.css
+++ b/Pigeon_website/Resources/css/Groups-page.css
@@ -3,7 +3,7 @@
 /********************************/
 
 .toggle-new-group-form {
-    text-align: center;
+    display: inline-block;
 }
 .toggle-new-group-form .glyphicon {
     margin-right: 12px;
