--- a/Pigeon_website/Resources/css/global.css
+++ b/Pigeon_website/Resources/css/global.css
@@ -13,6 +13,9 @@
 	font-family: Montserrat;
 	min-height: 100vh;
 }
+    .Page-container .title {
+        font-size: 24px;
+    }
 
 /*
     Header
