--- a/Pigeon_website/Resources/css/Groups-page.css
+++ b/Pigeon_website/Resources/css/Groups-page.css
@@ -88,6 +88,7 @@
         height: 100px;
         border-radius: 50%;
         margin: auto;
+        background-color: #E8BA61;  /* FALLBACK */
         background-size: cover;
         background-position: center center;
     }
