--- a/Pigeon_website/Resources/css/Tasks.css
+++ b/Pigeon_website/Resources/css/Tasks.css
@@ -25,16 +25,21 @@
 }
 
 .Tasks-app .title {
-    font-size: 22px;
+    /*font-size: 18px;
     margin: 8px 0;
     border-bottom: 2px solid #EEE;
-    padding-bottom: 15px;
+    padding-bottom: 15px;*/
+}
+.Tasks-app .task-category-title {
+    font-size: 20px;
 }
 
-.Tasks-container,
+.Tasks-container {
+    padding: 20px 0;
+}
 .Add-task-container {
-
-	padding: 20px 0;
+    padding-bottom: 20px;
+	
 }
 
 .Tasks-container.completed .checkbox-wrapper {
@@ -107,7 +112,7 @@
 	align-items: center;
 }
 
-.Tasks-app .title .glyphicon {
+.Tasks-app .task-category-title .glyphicon {
     margin-right: 12px;
 }
 
